--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +35,30 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#customers {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin: 0px 15px; 
+  font-size: 17px;
+}
+
+#customers td, #customers th {
+  border: 1px solid rgba(0, 0, 0, 0.59);
+  padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #2d4758e2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #1883c6df;
+  color: white;
+  text-align: center;
 }
