--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ffcde9;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   /* justify-content: center; */
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* font-size: calc(10px + 2vmin); */
+  color: black;
 }
 
 .App-link {
@@ -50,15 +50,15 @@
   padding: 8px;
 }
 
-#customers tr:nth-child(even){background-color: #2d4758e2;}
+#customers tr:nth-child(even){background-color: #d3a2d5e2;}
 
-#customers tr:hover {background-color: #ddd;}
+#customers tr:hover {background-color: #ffe7f5;}
 
 #customers th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #1883c6df;
+  background-color: #b458a9;
   color: white;
   text-align: center;
 }
