--- a/src/View/YoutubeSearch.scss
+++ b/src/View/YoutubeSearch.scss
@@ -39,6 +39,12 @@
             .title {
                 font-size: 18px;
                 font-weight: 600;
+                color: black;
+            }
+            a {
+                text-decoration: none;
+                color: red;
+                cursor: pointer;
             }
         }
     }
