--- a/src/View/nav.css
+++ b/src/View/nav.css
@@ -1,17 +1,19 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+
   }
   
   .topnav {
     overflow: hidden;
-    background-color: #49494e;
+    background-color: #ffffff;
     width: 100%;
+    margin-bottom: 20px;
   }
   
   .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: #b458a9;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -19,11 +21,12 @@ body {
   }
   
   .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: #ffe7f5;
+    color: rgb(160, 0, 255);
   }
   
   .topnav a.active {
-    background-color: #1585a3;
-    color: white;
+    background-color: #ffcde9;
+    color: rgb(160, 0, 255);
+    font-weight: 600;
   }
