--- a/src/View/YoutubeSearch.scss
+++ b/src/View/YoutubeSearch.scss
@@ -52,3 +52,8 @@
 .video-container{
   padding: 20px 100px;
 }
+.video-title {
+    font-size: 24px;
+    text-align: left;
+    padding-top: 10px;
+}
